package com.socrata.datacoordinator.truth.loader.sql.messages;

enum LifecycleStage {
  Unpublished = 0;
  Published = 1;
  Snapshotted = 2;
  Discarded = 3;
}

message UnanchoredDatasetInfo {
  required int64 systemId = 1;
  required int64 nextCounterValue = 2;
  required string localeName = 3;
  required bytes obfuscationKey = 4;
  optional string resourceName = 5;
}

message UnanchoredCopyInfo {
  required int64 systemId = 1;
  required int64 copyNumber = 2;
  required LifecycleStage lifecycleStage = 3;
  required int64 dataVersion = 4;
  required int64 lastModified = 5;
}

message UnanchoredColumnInfo {
  required int64 systemId = 1;
  required string userColumnId = 2;
  required string typeName = 3;
  required string physicalColumnBaseBase = 4;
  required bool isSystemPrimaryKey = 5;
  required bool isUserPrimaryKey = 6;
  required bool isVersion = 7;
  optional string fieldName = 8;
  optional ComputationStrategyInfo computationStrategyInfo = 9;

  message ComputationStrategyInfo {
      required string strategyType = 1;
      repeated string sourceColumnIds = 2;
      required string parameters = 3;
  }
}

message UnanchoredRollupInfo {
  required string name = 1;
  required string soql = 2;
}

message Truncated {
}

message ColumnCreated {
  required UnanchoredColumnInfo columnInfo = 1;
}

message ColumnRemoved {
  required UnanchoredColumnInfo columnInfo = 1;
}

message RowIdentifierSet {
  required UnanchoredColumnInfo columnInfo = 1;
}

message RowIdentifierCleared {
  required UnanchoredColumnInfo columnInfo = 1;
}

message SystemIdColumnSet {
  required UnanchoredColumnInfo columnInfo = 1;
}

message VersionColumnSet {
  required UnanchoredColumnInfo columnInfo = 1;
}

message LastModifiedChanged {
  required int64 lastModified = 1;
}

message WorkingCopyCreated {
  required UnanchoredDatasetInfo datasetInfo = 1;
  required UnanchoredCopyInfo copyInfo = 2;
}

message DataCopied {
}

message SnapshotDropped {
  required UnanchoredCopyInfo copyInfo = 1;
}

message WorkingCopyDropped {
}

message WorkingCopyPublished {
}

message RollupCreatedOrUpdated {
  required UnanchoredRollupInfo rollupInfo = 1;
}

message RollupDropped {
  required UnanchoredRollupInfo rollupInfo = 1;
}

message CounterUpdated {
  required int64 nextCounter = 1;
}

message FieldNameUpdated {
  required UnanchoredColumnInfo columnInfo = 1;
}

message RowsChangedPreview {
  required int64 rowsInserted = 1;
  required int64 rowsUpdated = 2;
  required int64 rowsDeleted = 3;
  required bool truncated = 4;
}

message EndTransaction {
}
